[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-images"
requires-python = ">= 3.9"

authors = [
    {name = "Tomasz Czyż", email = "tomasz.czyz@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
]
dependencies = [
    "requests>2.2,<3",
    "sphinx>=5.0",
]
description = "Sphinx extension for thumbnails"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
readme = "README.rst"
dynamic = ["version"]

[project.entry-points."sphinxcontrib.images.backend"]
FakeBackend = "sphinxcontrib_images_lightbox2:LightBox2"
LightBox2 = "sphinxcontrib_images_lightbox2:LightBox2"

[project.scripts]
sphinxcontrib-images = "sphinxcontrib.images:main"

[project.urls]
Documentation = "https://sphinxcontrib-images.readthedocs.io/"
Download = "https://pypi.python.org/pypi/sphinxcontrib-images"
Issues = "https://github.com/sphinx-contrib/images/issues"
Repository = "https://github.com/sphinx-contrib/images"

[tool.setuptools.dynamic]
version = {attr = "sphinxcontrib.images.__version__"}

[tool.setuptools.packages.find]
include = ["sphinxcontrib*"]

[tool.setuptools.package-data]
sphinxcontrib_images_lightbox2 = [
    "lightbox2/dist/css/lightbox.min.css",
    "lightbox2/dist/images/*",
    "lightbox2/dist/js/lightbox-plus-jquery.min.*",
    "lightbox2-customize/*",
]
